--- a/Mom to be/Mom to be/calender2.html
+++ b/Mom to be/Mom to be/calender2.html
@@ -168,7 +168,7 @@
               </div>
               </div>
               <br>
-              <form method="post" >
+              <form method="post" action="calendar.php" >
               <center><input type="submit" value="Send"></center>
               <br>
         </form>
